# Bolo

./: .gitignore  extract.js  get_design_specs.py  railway.toml  render.yaml  voxtral.html
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_voice_marketplace.py  003_voice_artist_user_id.py  004_speaker_metadata.py  005_data_contributions.py  006_missed_call_logs.py
backend/app/: celery_app.py  main.py
backend/app/api/: __init__.py  analytics.py  auth.py  billing.py  conversation.py  demo.py  knowledge.py  marketplace.py  missed_call.py  telephony.py  tenants.py  voice.py  voice_clones.py
backend/app/core/: config.py  constants.py  db_utils.py  language_detection.py  limiter.py  rag.py  security.py  sentiment.py  stt.py  translation.py  tts.py
backend/app/db/: base.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  api_key.py  conversation.py  data_contribution.py  knowledge_base.py  message.py  missed_call.py  subscription.py  tenant.py  usage.py  user.py  voice_artist.py  voice_clone.py  webhook.py
backend/app/services/: ai_ops.py  missed_call_service.py  missed_call_storage.py  storage.py  usage.py
backend/app/tasks/: knowledge.py  voice_clone.py
backend/scripts/: seed_demo.py  seed_marketplace.py
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_billing.py  test_conversations.py  test_health.py  test_knowledge.py  test_voice.py
docs/: PRD.md  api.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  (+1 more)
(+75 files in other folders)
